# verus-colocation

./: .gitignore  Cargo.toml  FORMAT.md  README.md  TODO.md  mockup.html  stopwords.txt
.github/workflows/: check.yml
output-data/: words.txt
scripts/: check-single-file.sh  check.sh
src/: colocation.rs  frequency.rs  lib.rs  pipeline.rs  tagger.rs
tests/: tagger_smoke.rs
