[package]
name = "verus-colocation"
version = "0.1.0"
edition = "2021"

[features]
default = []
tagger = ["pyo3", "csv", "serde", "serde_json", "flate2"]

[dependencies]
vstd = { path = "../verus/source/vstd" }
pyo3 = { version = "0.23", features = ["auto-initialize"], optional = true }
csv = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
flate2 = { version = "1", optional = true }

[package.metadata.verus]
verify = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_keep_ghost)'] }
